chaned catch phrase

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://senthilpalanisamy.github.io/portfolio/
 #baseurl: "portfolio"
 description: "Portfolio of a robotics Computer Vision Engineer"
 keywords: "Robotics, Computer Vision, Portfolio, jobs, Phd"
-skills: "Sensing and understanding the outside world through sensors is a fascinating process that your opens mind to the beauty of mathematics, programming and engineering"
+skills: "Sensing and understanding the outside world through sensors is a fascinating process that opens your mind to the beauty of mathematics, programming and engineering"
 meta_author: LastName FirstName
 
 # Google webmaster tools
