--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 1241 Emerson Avenue, At-2
-  - line: Illinois, 60201
+  - line: 1401, Red Hawk Circle, Apt- M207
+  - line: California, 94538
 
 # Credits content
 # credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
